# mneme-python

./: .gitignore  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release-check.yml  release.yml  testpypi.yml
docs/learning/: phase_06_code_walkthrough.md  phase_06_pyoz_evaluation.md  phase_06_python_packaging.md  phase_06_python_zig_interop.md
notebooks/: mneme_ai_semantic_dashboard.ipynb
python/: README.md  pyproject.toml
python/src/mneme/: __init__.py  collection.py  errors.py  native.py  results.py
python/src/mneme.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python/tests/: conftest.py  test_collection.py  test_hnsw.py  test_mock_integration.py  test_native_core.py  test_native_release_mock.py  test_persistence.py  test_search.py
scripts/: prepare_bundled_native.py  sync_python_readme.py
