[build-system]
requires = ["setuptools>=82.0.1", "wheel>=0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mneme"
version = "0.1.0"
description = "Python wrapper for the mneme embedded vector database core."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "mneme contributors" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.12",
  "bandit[toml]>=1.9.4",
  "mypy>=1.20.2",
]
numpy = [
  "numpy>=1.26.4; python_version < '3.11'",
  "numpy>=2.4.4; python_version >= '3.11'",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mneme = ["_native/*.so", "_native/*.dylib", "_native/*.dll", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=mneme --cov-report=term-missing --cov-report=xml --cov-fail-under=90"

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B404"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_subclassing_any = true
no_implicit_optional = true
plugins = []

[[tool.mypy.overrides]]
module = ["numpy"]
ignore_missing_imports = true
